--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 body {
   font-family: 'Open Sans', 'Helvetica', sans-serif;
+  margin: 0;
 }
 
-p {
+.page {
+  padding: 24px;
+}
+
+p, ul {
   margin-top: 0;
 }
