--- a/src/components/SidebarLink.scss
+++ b/src/components/SidebarLink.scss
@@ -8,4 +8,18 @@
     color: black;
     border-radius: 8px;
   }
+
+  &.pending {
+    color: gray;
+
+    position: relative;
+
+    &:before {
+      content: '⏳';
+
+      position: absolute;
+      left: -12px;
+      top: 4px;
+    }
+  }
 }
