--- a/src/pages/Root.scss
+++ b/src/pages/Root.scss
@@ -25,5 +25,40 @@
 
   #content {
     flex-grow: 1;
+
+    position: relative;
+  }
+
+  .progress-bar {
+    background-color: lightgray;
+    overflow: hidden;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 4px;
+  }
+
+  .progress-bar-inner {
+    animation: 2s infinite progress-bar-slide;
+    background-color: rgb(131, 39, 224);
+
+    position: absolute;
+    top: 0;
+
+    width: 40%;
+    height: 100%;
+  }
+}
+
+@keyframes progress-bar-slide {
+  from {
+    left: -40%;
+  }
+
+  to {
+    left: 100%;
   }
 }
