--- a/src/pages/Root.scss
+++ b/src/pages/Root.scss
@@ -25,8 +25,11 @@
 
   #content {
     flex-grow: 1;
+    overflow: auto;
 
     position: relative;
+
+    max-height: 100vh;
   }
 
   .progress-bar {
