--- a/src/pages/Root.scss
+++ b/src/pages/Root.scss
@@ -9,9 +9,8 @@
     box-sizing: border-box;
     padding: 24px;
 
-    flex-basis: 300px;
-
     height: 100vh;
+    min-width: 250px;
 
     ul {
       list-style: none;
