--- a/src/pages/QueueSortPage.scss
+++ b/src/pages/QueueSortPage.scss
@@ -15,6 +15,10 @@
 
       display: flex;
       flex-direction: column;
+
+      input[type='text'] {
+        width: 100px;
+      }
     }
   }
 
