--- a/src/pages/QueueSortPage.scss
+++ b/src/pages/QueueSortPage.scss
@@ -1,7 +1,7 @@
 #queue-sort-page {
   .sort-controls {
     background: white;
-    border-bottom: 1px solid #b9a2ff;
+    border-bottom: 1px solid var(--color-accent);
     display: flex;
     padding: 12px 0 12px;
 
