--- a/src/pages/Root.scss
+++ b/src/pages/Root.scss
@@ -5,7 +5,7 @@
 
   #sidebar {
     background-color: #f6f3ff;
-    border-right: 1px solid #b9a2ff;
+    border-right: 1px solid var(--color-accent);
     box-sizing: border-box;
     padding: 24px;
 
