--- a/src/pages/RandomPickerPage.scss
+++ b/src/pages/RandomPickerPage.scss
@@ -1,13 +1,14 @@
 #random-picker-page {
   .header {
     border-bottom: 1px solid var(--color-accent);
+    display: flex;
     padding: 0 0 20px;
 
-    width: 100%;
+    column-gap: 12px;
+    flex-wrap: wrap;
+    row-gap: 12px;
 
-    button {
-      margin-right: 12px;
-    }
+    width: 100%;
   }
 
   .content {
