feat(ProjectToQueuePage): add transfer button with confirm message (doesn't actually do anything yet)

--- a/src/pages/ProjectToQueuePage.scss
+++ b/src/pages/ProjectToQueuePage.scss
@@ -10,4 +10,16 @@
       align-items: center;
     }
   }
+
+  .card-wrapper {
+    display: flex;
+
+    flex-direction: column;
+
+    button {
+      cursor: pointer;
+
+      width: 100%;
+    }
+  }
 }
