style: always show loading bar even if scrolled down

--- a/src/pages/Root.scss
+++ b/src/pages/Root.scss
@@ -34,8 +34,9 @@
   .progress-bar {
     background-color: lightgray;
     overflow: hidden;
+    z-index: 10;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
