--- a/src/pages/ProjectToQueuePage.scss
+++ b/src/pages/ProjectToQueuePage.scss
@@ -2,9 +2,12 @@
   .options {
     display: flex;
 
+    column-gap: 12px;
+    flex-wrap: wrap;
+    row-gap: 4px;
+
     label {
       display: flex;
-      margin-right: 12px;
       user-select: none;
 
       align-items: center;
